--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
+cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
 project(pole_detector)
 
-find_package(PCL 1.3 REQUIRED COMPONENTS common io) # Change here, add components as needed
+find_package(PCL 1.3 REQUIRED)
 
 include_directories(
 ${PCL_INCLUDE_DIRS}
@@ -18,5 +18,4 @@ add_executable(pole_detector
 	src/main.cpp)
 
 target_link_libraries(pole_detector 
-	${PCL_COMMON_LIBRARIES} 
-	${PCL_IO_LIBRARIES}) # Change here, link component libraries as needed
+	${PCL_LIBRARIES})
