Included esf based pole and tree detection to the code. Tested susuccesfull

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,6 @@ link_directories(${PCL_LIBRARY_DIRS})
 
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable(pole_detector
-	src/pole_detector.cpp
-	src/main.cpp)
-
-target_link_libraries(pole_detector 
-	${PCL_LIBRARIES})
-
 find_package(HDF5)
 if(HDF5_FOUND)
 
@@ -27,6 +20,12 @@ if(HDF5_FOUND)
   include_directories(${FLANN_INCLUDE_DIRS})
 
   include_directories(${HDF5_INCLUDE_DIR})
+  add_executable(pole_detector
+    src/pole_detector.cpp
+	src/main.cpp)
+
+  target_link_libraries(pole_detector ${PCL_LIBRARIES} ${Boost_LIBRARIES}
+                                 ${FLANN_LIBRARIES} ${HDF5_hdf5_LIBRARY})
 
   add_executable(build_tree src/build_tree.cpp)
   target_link_libraries(build_tree ${PCL_LIBRARIES} ${Boost_LIBRARIES}
