Refactored some files and functions in classifier and detector classes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,25 +23,25 @@ if(HDF5_FOUND)
   include_directories(${FLANN_INCLUDE_DIRS})
 
   include_directories(${HDF5_INCLUDE_DIR})
-  add_executable(pole_detector
-    src/pole_detector.cpp
-	src/main.cpp
-	src/FeatureDescriptor.cpp
-          src/RandomForestLearner.cpp include/Visualizer.hpp src/Preprocessor.cpp include/Preprocessor.hpp src/Segmenter.cpp include/Segmenter.hpp include/IO.hpp)
+  add_executable(landmark_classifier
+          src/Master.cpp
+          src/landmark_classifier.cpp
+          src/Classifier/FeatureExtractor.cpp
+          src/Classifier/RandomForestLearner.cpp include/Libs/Visualizer.hpp src/Preprocessor/Preprocessor.cpp include/Preprocessor/Preprocessor.hpp src/Segmenter/Segmenter.cpp include/Segmenter/Segmenter.hpp include/Libs/IO.hpp src/Detector/RuleBasedDetector.cpp include/Detector/RuleBasedDetector.hpp src/Classifier/FeatureBasedClassifier.cpp include/Classifier/FeatureBasedClassifier.hpp)
 
-  target_link_libraries(pole_detector ${PCL_LIBRARIES} ${Boost_LIBRARIES}
+  target_link_libraries(landmark_classifier ${PCL_LIBRARIES} ${Boost_LIBRARIES}
                                  ${FLANN_LIBRARIES} ${HDF5_hdf5_LIBRARY} ${OpenCV_LIBS})
 
   add_executable(train_knn
           src/train_knn.cpp
-          src/FeatureDescriptor.cpp)
+          src/Classifier/FeatureExtractor.cpp)
 
   target_link_libraries(train_knn ${PCL_LIBRARIES} ${Boost_LIBRARIES}
                                  ${FLANN_LIBRARIES} ${HDF5_hdf5_LIBRARY})
   add_executable(train_randomForest
           src/train_randomForest.cpp
-          src/RandomForestLearner.cpp
-          src/FeatureDescriptor.cpp)
+          src/Classifier/RandomForestLearner.cpp
+          src/Classifier/FeatureExtractor.cpp)
 
   target_link_libraries(train_randomForest ${PCL_LIBRARIES} ${Boost_LIBRARIES}
           ${FLANN_LIBRARIES} ${HDF5_hdf5_LIBRARY} ${OpenCV_LIBS})
